--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: black;
+  font-family: 'Segoe UI',sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+body {
+  background-color: #e5e8d6;
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+}
+
+
