--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,7 +2,7 @@
 
   <div class="bigCard-photo">
     <img
-      src="https://source.unsplash.com/random"
+      src="{{ photoCover }}"
       alt="teste"
       srcset=""
     >
@@ -12,7 +12,7 @@
   </div>
   <div class="bigCard-title">
     <h1><a href="#">
-     Lorem ipsum dolor sit amet consectetur adipisicing elit.
+     {{ cardTitle }}
     </a></h1>
   </div>
 </div>
