--- a/src/app/components/flash-card/flash-card.component.html
+++ b/src/app/components/flash-card/flash-card.component.html
@@ -3,10 +3,10 @@
     <p><strong>Category</strong> . Gym</p>
   </div>
   <div class="flashCard-title">
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
+    <h1>{{ flashCardTitle }}</h1>
   </div>
   <div class="flashCard-img">
-    <img src="https://source.unsplash.com/random"
+    <img src="{{ flashCardImg }}"
     alt=""
     >
   </div>
