--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -5,25 +5,23 @@
     </div>
     <div class="newCard-title">
       <h1><a href="#">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        {{ newCardTitle }}
        </a></h1>
     </div>
     <div class="newCard-description">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-         Consequatur, odio suscipit,
-        neque consectetur laboriosam libero?</p>
+      <p>{{ newCardDescripition }}</p>
     </div>
     <div class="newCard-separator">
       <hr>
     </div>
     <div class="newCard-subtitleOne">
-      <h3><a href="#">Consequatur, odio suscipit,</a></h3>
+      <h3><a href="#">{{ newCardSubTitleOne }}</a></h3>
     </div>
     <div class="newCard-separator">
       <hr>
     </div>
     <div class="newCard-subtitleTwo">
-      <h3><a href="#">Consequatur, odio suscipit,</a></h3>
+      <h3><a href="#">{{ newCardSubTitleTwo }}</a></h3>
     </div>
   </div>
 
