--- a/src/app/components/video-card/video-card.component.html
+++ b/src/app/components/video-card/video-card.component.html
@@ -3,11 +3,11 @@
     <div class="videoCard-category">
       <p><strong>Category</strong> . Gym</p>
     </div>
-    <img src="https://source.unsplash.com/random"
+    <img src="{{ videoCardImg }}"
     alt=""
     >
     <div class="videoCard-title">
-      <h3>lorem lorem lorem</h3>
+      <h3>{{ videoCardTitle }}</h3>
     </div>
     </div>
 </div>
