--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -10,19 +10,38 @@
 
   <div class="articles">
   <div class="articles-bigCard">
-    <app-big-card></app-big-card>
+    <app-big-card photoCover="https://source.unsplash.com/random"
+      cardTitle="Lorem Ypsum Teste"
+    >
+    </app-big-card>
   </div>
   <div class="articles-midCard">
     <div class="teste-newCard">
-      <app-news-card></app-news-card>
+      <app-news-card newCardTitle="Lorem ipsum dolor sit amet consectetur adipisicing elit."
+        newCardDescripition=" Lorem, ipsum dolor sit amet consectetur adipisicing elit Consequatur, odio suscipit,neque consectetur laboriosam libero?"
+        newCardSubTitleOne="Consequatur, odio suscipit,"
+        newCardSubTitleTwo="Consequatur, odio suscipit,"
+      >
+
+      </app-news-card>
     </div>
     <div class="teste-VideoCard">
-      <app-video-card></app-video-card>
+      <app-video-card
+        videoCardImg="https://source.unsplash.com/random"
+        videoCardTitle="lorem lorem lorem"
+      >
+
+      </app-video-card>
     </div>
 
   </div>
   <div class="teste-flashCard">
-    <app-flash-card></app-flash-card>
+    <app-flash-card
+      flashCardTitle="Lorem Lorem Lorem"
+      flashCardImg="https://source.unsplash.com/random"
+    >
+
+    </app-flash-card>
     <div class="teste-smallCard">
       <app-small-card></app-small-card>
     </div>
